feat: github auth

--- a/.env.sample
+++ b/.env.sample
@@ -114,6 +114,14 @@ OIDC_DISPLAY_NAME=OpenID Connect
 # Space separated auth scopes.
 OIDC_SCOPES=openid profile email
 
+# To configure Github auth, you'll need to create a GitHub App at
+# => https://github.com/settings/apps
+#
+# When configuring the Client ID, add a redirect URL under "Permissions & events":
+# https://<URL>/auth/github.callback
+GITHUB_CLIENT_ID=get_a_key_from_slack
+GITHUB_CLIENT_SECRET=get_the_secret_of_above_key
+
 
 # –––––––––––––––– OPTIONAL ––––––––––––––––
 
