fix: install & auth

--- a/.env.sample
+++ b/.env.sample
@@ -121,6 +121,9 @@ OIDC_SCOPES=openid profile email
 # https://<URL>/api/github.callback
 GITHUB_CLIENT_ID=get_a_key_from_slack
 GITHUB_CLIENT_SECRET=get_the_secret_of_above_key
+GITHUB_APP_NAME=get_the_name_of_registered_github_app
+GITHUB_APP_ID=get_the_id_of_registered_github_app
+GITHUB_APP_PRIVATE_KEY=get_the_private_key_of_registered_github_app
 
 
 # –––––––––––––––– OPTIONAL ––––––––––––––––
