--- a/package.json
+++ b/package.json
@@ -151,6 +151,7 @@
     "node-fetch": "2.7.0",
     "nodemailer": "^6.9.4",
     "outline-icons": "^3.0.0",
+    "octokit": "^3.1.2",
     "oy-vey": "^0.12.1",
     "passport": "^0.6.0",
     "passport-google-oauth2": "^0.2.0",
