fix: hide behind a flag

--- a/.env.sample
+++ b/.env.sample
@@ -124,6 +124,7 @@ GITHUB_CLIENT_SECRET=get_the_secret_of_above_key
 GITHUB_APP_NAME=get_the_name_of_registered_github_app
 GITHUB_APP_ID=get_the_id_of_registered_github_app
 GITHUB_APP_PRIVATE_KEY=get_the_private_key_of_registered_github_app
+GITHUB_INTEGRATION_DISABLED=true
 
 
 # –––––––––––––––– OPTIONAL ––––––––––––––––
